Fix tab title wrapping on mobile. Still looks ugly, just not broken. Mostly fixes #189.

--- a/scss/_ru_tabs.scss
+++ b/scss/_ru_tabs.scss
@@ -15,11 +15,13 @@
 .tabs.ru_tabs.physics dd a, .tabs.ru_tabs.general dd a
 {
     background-color: $ru_physics !important;
-    border: $ru_physics 1px solid;
+    border-top: $ru_physics 1px solid;
+    border-bottom: #ccc 1px solid;
+    
     &:hover
     {
         background-color: lighten($ru_physics,$ru_site_hover) !important;
-        border: lighten($ru_physics,$ru_site_hover) 1px solid;
+        border-top: lighten($ru_physics,$ru_site_hover) 1px solid;
     }
 }
 
@@ -53,7 +55,7 @@
     color: #333;
     border: #cccccc 1px solid;
     border-bottom: #f6f6f6 1px solid;
-    padding-bottom: 11px;
+//    padding-bottom: 11px; THIS BREAKS TABS WHEN SHRINKING ON MOBILE
     z-index: 100;
 }
 
